# FHT-Map

./: .gitignore  LICENSE  README.md
fht_map/: CMakeLists.txt  package.xml
fht_map/data/urdf/: turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
fht_map/launch/: fht_map_cons.launch  robot_navigation.launch  robot_relocalization.launch
fht_map/msg/: EdgeMsg.msg  SupportVertexMsg.msg  TopoMapMsg.msg  VertexMsg.msg
fht_map/rviz/: acml.rviz  fht_map_cons.rviz  topo_navigation.rviz  topo_reloca.rviz
fht_map/scripts/: TopoMap.py  ransac_icp.py  robot.py  robot_function.py  topo_navigation.py  topo_relocalization.py
fht_map/scripts/utils/: ColorMapping.py  astar.py  topomap_bridge.py
fht_map/src/pose_graph_opt/: CMakeLists.txt  README.md  angle_local_parameterization.h  input  input2  input3  main.cpp  main.ipynb  normalize_angle.h  pose_graph_2d  pose_graph_2d_error_term.h  types.h
figure/: readme.md
turtlebot3sim/: package.xml
turtlebot3sim/config/: turtlebot3_lds_2d.lua  turtlebot3_robot1.lua
turtlebot3sim/launch/includes/: cartographer_teb_origin.launch  move_base_robot.launch  robot.launch.xml
turtlebot3sim/launch/robots_slam/: single_robot_origin.launch
turtlebot3sim/launch/simulation_environment/: museum_env.launch  museum_env_relo.launch  office_env.launch
turtlebot3sim/param_teb/: costmap_common_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params_burger.yaml
turtlebot3sim/script/: map_padding.py
turtlebot3sim/worlds/: Academy.world  large_indoor.world
(+60 files in other folders)
